fix compiler bustage on sun forte, due to some bogus |inline| qualifiers.

b=224968, r+sr=alecf, a=tor